--- a/app/src/main/res/layout/activity_new_bet.xml
+++ b/app/src/main/res/layout/activity_new_bet.xml
@@ -119,7 +119,8 @@
                             android:layout_height="wrap_content"
                             android:layout_centerHorizontal="true"
                             android:clickable="false"
-                            android:longClickable="false"                            android:duplicateParentState="false"
+                            android:longClickable="false"
+                            android:duplicateParentState="false"
                             android:enabled="true"
                             android:focusable="false"/>
 
@@ -199,6 +200,7 @@
 
                 <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                     android:id="@+id/acceptButton"
+                    android:visibility="invisible"
                     android:layout_width="70dp"
                     android:layout_height="70dp"
                     android:src="@drawable/ic_done_check"
@@ -209,7 +211,10 @@
                     app:civ_border_color="#EEE"
                     app:civ_border_width="2dp" />
 
+
+
                 <TextView
+                    android:visibility="invisible"
                     android:id="@+id/acceptText"
                     android:layout_below="@+id/acceptButton"
                     android:padding="10dp"
@@ -221,7 +226,7 @@
 
 
                 <Button
-                    android:layout_alignParentBottom="true"
+                    android:layout_centerInParent="true"
                     android:layout_centerHorizontal="true"
                     android:background="@mipmap/ic_cancel"
                     android:id="@+id/declineButton"
@@ -237,7 +242,7 @@
                 <RelativeLayout
                     android:layout_centerHorizontal="true"
                     android:layout_marginBottom="10dp"
-                    android:layout_alignParentBottom="true"
+                    android:layout_above="@+id/swipeAccept"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
 
@@ -276,7 +281,27 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
 
+
+
                 </RelativeLayout>
+
+                <in.shadowfax.proswipebutton.ProSwipeButton
+                    android:visibility="visible"
+                    android:id="@+id/swipeAccept"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:arrow_color="@color/white"
+                    android:layout_alignParentBottom="true"
+                    app:bg_color="@color/green"
+                    app:btn_text="Swipe to accept"
+                    app:text_color="@android:color/white"
+                    app:text_size="12sp" />
+
+
+
+
+
+
 
 
 
